# xarm_ros2_client_py_pkg

./: package.xml  setup.cfg  setup.py
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/xarm_ros2_client_py_pkg/lib/xarm_ros2_client_py_pkg/: xarm_ros2_client_py
install/xarm_ros2_client_py_pkg/share/xarm_ros2_client_py_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
xarm_ros2_client_py_pkg/: xarm_ros2_client_py.py
